Fix Some overlapping and mid-screen size layout for Messages

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -103,7 +103,9 @@
   }
 
   &.messagesColumn {
+    height: 85px;
     >div {
+      height: 85px;
       border-left: none;
     }
   }
